--- a/Space_Invaders/PRR1_19_Visning/PRR1_19_Visning/PRR1_19_Visning.csproj
+++ b/Space_Invaders/PRR1_19_Visning/PRR1_19_Visning/PRR1_19_Visning.csproj
@@ -46,7 +46,8 @@
     <Compile Include="IUpdate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Timer.cs" />
+    <Compile Include="Randomnumbers.cs" />
+    <Compile Include="Scoreclass.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
