--- a/Space_Invaders/PRR1_19_Visning/PRR1_19_Visning/PRR1_19_Visning.csproj
+++ b/Space_Invaders/PRR1_19_Visning/PRR1_19_Visning/PRR1_19_Visning.csproj
@@ -43,10 +43,10 @@
   <ItemGroup>
     <Compile Include="Game1.cs" />
     <Compile Include="IDraw.cs" />
+    <Compile Include="IPowerUp.cs" />
     <Compile Include="IUpdate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Randomnumbers.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
